Fix excessive vertical spacing on tweets in a grid row

--- a/scss/_post.scss
+++ b/scss/_post.scss
@@ -297,6 +297,10 @@
       width: unset !important;
     }
 
+    .grid-row .twitter-tweet {
+      margin: 0 !important;
+    }
+
     .card {
       text-decoration: none;
       background: $lightPink;
